css/styles.css
/* ... */
.about-upper-block-left {
  width: 686px;
}

.about-text {
  margin-top: 16px;
  margin-bottom: 23px;

  width: 439px;

  background-color: var(--bg-color);
}

.about-right-block {
  display: flex;
  flex-direction: row;
  gap: 24px;
  align-items: center;

  background-color: var(--bg-color);
}

.about-span-container {
  display: inline-block;
  position: relative;
}

.about-span {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1;
}

.about-span-reflection {
  position: absolute;
  left: 0;
  top: 60%;

  width: 100%;
  height: 100%;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
  line-height: 1;
  text-align: left;

  opacity: 1;
  overflow: hidden;
  pointer-events: none;

  transform: scaleY(-1);

  -webkit-mask-image: linear-gradient(
    to bottom,
    rgba(201, 201, 201, 0) 40%,
    rgba(201, 201, 201, 0.3) 100%
  );
  mask-image: linear-gradient(
    to bottom,
    rgba(201, 201, 201, 0) 40%,
    rgba(201, 201, 201, 0.3) 100%
  );
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.swiper-wrapper.swiper-second {
  display: flex;

  width: 100%;
  height: 332px;
  padding-bottom: 64px;
}

.swiper-slide.swiper-second {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: end;

  width: 416px;
  height: 332px;
  padding: 21px 29px;

  background-size: cover;
  background-position: center;

  overflow: hidden;
}

.swiper-slide.swiper-second::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 0;

  background: linear-gradient(to bottom, rgba(5, 0, 0, 0.2) 0%, rgba(14, 14, 14, 1) 100%);
}

.swiper-slide.swiper-second.swiper-second-1st {
  background-image: url(../assets/img/about/about-1.webp);
}

.swiper-slide.swiper-second.swiper-second-2nd {
  background-image: url(../assets/img/about/about-2.webp);
}

.swiper-slide.swiper-second.swiper-second-3rd {
  background-image: url(../assets/img/about/about-3.webp);
}

.swiper-slide.swiper-second.swiper-second-4th {
  background-image: url(../assets/img/about/about-4.webp);
}

.swiper-slide.swiper-second.swiper-second-5th {
  background-image: url(../assets/img/about/about-5.webp);
}

.swiper-slide.swiper-second.swiper-second-6th {
  background-image: url(../assets/img/about/about-6.webp);
}

.swiper-second.swiper-button-prev:after,
.swiper-second.swiper-button-next:after {
  content: none;
}
.swiper-navigation.swiper-second {
  position: absolute;
  bottom: 0;
  left: calc(50% - (166px / 2));
  display: flex;
  justify-content: center;

  width: 166px;
  height: 20px;
  padding: 0 20px;
}

.swiper-second.swiper-button-prev,
.swiper-second.swiper-button-next {
  z-index: 10;

  width: 60px;

  border: none;

  background-color: transparent;
  
  cursor: pointer;
}

.swiper-button-prev svg,
.swiper-button-next svg {
  fill: var(--dark);

  transition: fill var(--transition);
}

.swiper-button-prev:hover svg,
.swiper-button-prev:focus svg,
.swiper-button-next:hover svg,
.swiper-button-next:focus svg {
  fill: var(--accent);
}

.about-swiper-content {
  position: relative;
  top: 101px;
  z-index: 1;

  user-select: none;

  transition: top var(--transition);
}

.swiper-second-name {
  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
}

.swiper-second-points {
  display: flex;
  flex-direction: column;
  gap: 5px;

  margin-top: 12px;
  
  color: var(--bg-color);
}

.points-visible {
  top: 0;
}

/* --------- STATUS --------- */

.status {
  margin-bottom: 143px;
}

.status-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.section-title.status-title {
  margin-bottom: 67px;
}

.status-list {
  display: flex;
  flex-direction: row;
  gap: 24px;

  cursor: default;
  user-select: none;
}

.status-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  z-index: 10;

  width: calc((100% - 72px) / 4);
  height: 206px;

  background-color: var(--status-items);

  transition: background-color var(--transition);
}

.status-number {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 52px;
  font-weight: 600;
  line-height: 1.192;

  transition: color var(--transition);
}

.status-descr {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;

  transition: color var(--transition);
}

.status-item:hover {
  background-color: var(--accent);
}

.status-item:hover .status-number {
  color: var(--bg-color);
}

.status-item:hover .status-descr {
  color: var(--bg-color);
}

/* --------- PROJECTS --------- */

.container.container-projects {
  position: relative;

  margin-bottom: 67px;
}

.projects-text {
  width: fit-content;
}

.projects-buttons {
  position: absolute;
  display: flex;
  justify-content: center;
  top: 66px;
  right: 0;

  width: 166px;
  height: 40px;
}

.projects-button.swiper-button-prev:after,
.projects-button.swiper-button-next:after {
  content: none;
}

.projects-button.swiper-button-prev,
.projects-button.swiper-button-next {
  width: 60px;

  border: none;

  background-color: transparent;
  
  cursor: pointer;
}

.projects-button.swiper-button-prev svg,
.projects-button.swiper-button-next svg {
  fill: var(--dark);

  transition: fill var(--transition);
}

.projects-button.swiper-button-prev:hover svg,
.projects-button.swiper-button-prev:focus svg,
.projects-button.swiper-button-next:hover svg,
.projects-button.swiper-button-next:focus svg {
  fill: var(--accent);
}

.swiper.swiper-3 {
  margin-bottom: 143px;
}

.swiper-wrapper.projects-list {
  display: flex;
  font-display: row;
}

.projects-item {
  position: relative;
  
  cursor: pointer;
}

.project-1 {
  background-image: url(../assets/img/projects/project-1.webp);
}
/* ... */

